--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
   compileSdkVersion 26
-  buildToolsVersion '26.0.2'
+  buildToolsVersion '28.0.3'
 
   lintOptions {
     abortOnError false
@@ -23,7 +23,7 @@ android {
 }
 
 dependencies {
-  compile 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.2'
-  compile 'com.android.support:support-v4:26.1.0'
-  compile 'com.android.support:design:26.1.0'
+  implementation 'com.dlazaro66.qrcodereaderview:qrcodereaderview:2.0.2'
+  implementation 'com.android.support:support-v4:26.1.0'
+  implementation 'com.android.support:design:26.1.0'
 }
